--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hirelens AI | The Future of Interviews</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-    <link rel="icon" type="image/png" href="/HireLens%20(1).png" />
+    <link rel="icon" type="image/png" href="/HireLens.png" />
     <style>
         body { 
           font-family: 'Inter', sans-serif; 
